--- a/Frontend Mentor - Intro with Dropdown/Main/styles.css
+++ b/Frontend Mentor - Intro with Dropdown/Main/styles.css
@@ -1,12 +1,86 @@
+
+/*GLOBAL SECTION*/
+
 * {
     font-size: 16px;
+    font-family: 'Epilogue', sans-serif;
+}
+
+body {
+    background-color: hsl(0, 0%, 98%);
+    height: 800px;
+}
+
+main {
+    display: flex;
 }
 
 
+h1 {
+    font-size: 5rem;
+    margin: 0;
+}
 
+p {
+    font-size: 18px;;
+}
 
+/*NAV SECTION */
 
+nav {
+    display: flex;
+    margin: 1rem;
+    width: 90%;
+    height: 2rem;
+    align-items: center;
+}
 
+.minimal {
+    border: none;
+    background-color: hsl(0, 0%, 98%);
+    color: hsl(0, 0%, 41%);
+    font-size: 0.9rem;
+    display:flex;
+    align-items: center;
+}
+
+.minimal:hover {
+    color: hsl(0, 0%, 8%);
+}
+
+#logo {
+    width: 84px;
+    height: 27px;
+}
+
+#registerButton {
+    background-color:hsl(0, 0%, 98%);
+    border: 2px solid hsl(0, 0%, 41%);
+    color: hsl(0, 0%, 41%);
+    padding: 0.7rem 1rem;
+    border-radius: 1rem;
+    font-size: 0.9rem;
+}
+
+#registerButton:hover {
+    color: hsl(0, 0%, 8%);
+    border: 2px solid hsl(0, 0%, 8%);
+}
+
+.nav-leftList {
+    display:flex;
+    list-style-type: none;
+    margin-right: 30%;
+    justify-content: space-evenly;
+    width: 30%;
+}
+
+.nav-rightList {
+    display:flex;
+    justify-content: space-evenly;
+}
+
+/* NAV CONTAINERS */
 
 .featuresContainer {
     border: 3px solid red;
@@ -14,32 +88,64 @@
     width: fit-content;
     padding: 1rem;
     visibility: hidden;
+    position:absolute;
+    left: 6%;
 }
 
-
+.featuresList {
+    border: 1px solid purple;
+}
 
 .companyContainer {
     visibility: hidden;
+    display: flex;
+    align-items:center;
+    justify-content: center;
+    height: fit-content;
+    width: fit-content;
+    position:absolute;
+}
+
+
+/* MAIN SECTION */
+
+main {
+    display: flex;
+    width: 90%;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+
+.mainContainer {
+    border: 2px solid yellowgreen;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items:flex-start;
+    justify-content: center;
+    max-width: 500px;
+    padding-top: 10%;
+    max-height: 40rem;
+    height: 30rem;
+}
+
+.learnButton {
+    background-color: hsl(0, 0%, 8%);
+    color:hsl(0, 0%, 98%);
+    padding: 0.7rem 1.2rem;
+    border-radius: 0.7rem;
+    font-size: 18px;
 }
 
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.heroImage {
+    border: 1px solid red;
+    height: 30rem;
+}
 
 
 
@@ -49,5 +155,13 @@
 
 /* ATTRIBUTION SECTION */
 
-.attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); }
+.attribution { 
+    font-size: 11px; text-align: center; 
+    grid-area: 7 / 3 / span 1 / span 3;
+    display: flex;
+    justify-content: center;
+    align-self: center;
+}
+.attribution a { 
+    color: hsl(228, 45%, 44%); 
+}
