--- a/Frontend Mentor - Intro with Dropdown/Main/styles.css
+++ b/Frontend Mentor - Intro with Dropdown/Main/styles.css
@@ -11,28 +11,36 @@ body {
     height: 800px;
 }
 
-main {
-    display: flex;
-}
-
-
 h1 {
     font-size: 5rem;
     margin: 0;
 }
 
-p {
-    font-size: 18px;;
-}
-
 /*NAV SECTION */
 
 nav {
-    display: flex;
-    margin: 1rem;
-    width: 90%;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    width: 100%;
     height: 2rem;
     align-items: center;
+}
+
+.nav-leftList {
+    display:flex;
+    list-style-type: none;
+    justify-content: space-between;
+    align-items: center;
+    width: 55%;
+    margin-left: 3%;
+    padding: 0;
+    grid-column: 1 / 1;
+}
+
+.nav-rightList {
+    display:flex;
+    justify-content: space-evenly;
+    grid-column: 2 / 2;
 }
 
 .minimal {
@@ -48,9 +56,15 @@ nav {
     color: hsl(0, 0%, 8%);
 }
 
+.buttonArrow {
+    margin-left: 0.5rem;
+    display:flex;
+}
+
 #logo {
     width: 84px;
     height: 27px;
+    grid-column: 1 / 1;
 }
 
 #registerButton {
@@ -67,67 +81,102 @@ nav {
     border: 2px solid hsl(0, 0%, 8%);
 }
 
-.nav-leftList {
-    display:flex;
-    list-style-type: none;
-    margin-right: 30%;
-    justify-content: space-evenly;
-    width: 30%;
-}
-
-.nav-rightList {
-    display:flex;
-    justify-content: space-evenly;
-}
-
 /* NAV CONTAINERS */
 
-.featuresContainer {
-    border: 3px solid red;
-    height: fit-content;
-    width: fit-content;
-    padding: 1rem;
-    visibility: hidden;
-    position:absolute;
-    left: 6%;
+
+.list {
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    padding: 0;
+    font-size: 0.9rem;
+    color:hsl(0, 0%, 41%);
 }
 
-.featuresList {
-    border: 1px solid purple;
+.list li {
+    padding: 0.3rem 0;
+}
+
+.featuresLogoContainer {
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    width: 1rem;
+    padding: 0;
+}
+
+.featuresLogoContainer img {
+    padding: 0.3rem 0;
+}
+
+.featuresContainer {
+    display: grid;
+    justify-items: center;
+    grid-template-columns: 1fr 2fr;
+    background-color: white;
+    list-style-type: none;
+    padding: 1.5rem 1rem;
+    visibility: hidden;
+    position: absolute;
+    left: 7%;
+    top: 8%;
+    box-shadow: 0 0 0.7rem -0.2rem hsl(0, 0%, 41%);
+    border-radius: 0.6rem;
 }
 
 .companyContainer {
     visibility: hidden;
-    display: flex;
     align-items:center;
     justify-content: center;
     height: fit-content;
     width: fit-content;
-    position:absolute;
+    position: absolute;
+    padding: 1rem;
+    background-color: white;
+    top: 8%;
+    box-shadow: 0 0 0.7rem -0.2rem hsl(0, 0%, 41%);
+    border-radius: 0.6rem;
 }
 
 
 /* MAIN SECTION */
 
 main {
-    display: flex;
-    width: 90%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10%;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 5%;
     align-items: center;
     justify-content: space-evenly;
 }
 
 
-.mainContainer {
-    border: 2px solid yellowgreen;
+.mainOuterContainer {
     padding: 0;
+    width: 100%;
+    height: 100%;
+    grid-column: 1 / 1;
+    display: flex;
+    align-items: flex-end;
+}
+
+.mainInnerContainer {
+    height: 80%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items:flex-start;
-    justify-content: center;
-    max-width: 500px;
-    padding-top: 10%;
-    max-height: 40rem;
-    height: 30rem;
+    justify-content: space-between;
+}
+
+.mainSentence {
+    margin-bottom: 10%;
+    font-size: 18px;
+    width: 90%;
+    color:hsl(0, 0%, 41%);
 }
 
 .learnButton {
@@ -136,15 +185,26 @@ main {
     padding: 0.7rem 1.2rem;
     border-radius: 0.7rem;
     font-size: 18px;
+    margin-bottom: 10%;
 }
 
+.learnButton:active {
+    background-color:hsl(0, 0%, 98%);
+    border: 1px solid hsl(0, 0%, 8%);
+    color: hsl(0, 0%, 8%);
+    transition: 0.2s;
+}
 
-
-
+.mainLogoContainer {
+    display: flex;
+    width: 90%;
+    justify-content: space-between;
+    align-items: center;
+}
 
 .heroImage {
-    border: 1px solid red;
-    height: 30rem;
+    max-height: 40rem;
+    grid-column: 2 / 2;
 }
 
 
@@ -161,6 +221,7 @@ main {
     display: flex;
     justify-content: center;
     align-self: center;
+    margin-top: 3%;
 }
 .attribution a { 
     color: hsl(228, 45%, 44%); 
