--- a/Frontend Mentor - Intro with Dropdown/Main/styles.css
+++ b/Frontend Mentor - Intro with Dropdown/Main/styles.css
@@ -16,11 +16,12 @@ h1 {
     margin: 0;
 }
 
+
 /*NAV SECTION */
 
 nav {
     display: grid;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 1fr 6fr 2fr;
     width: 100%;
     height: 2rem;
     align-items: center;
@@ -34,13 +35,15 @@ nav {
     width: 55%;
     margin-left: 3%;
     padding: 0;
-    grid-column: 1 / 1;
+    grid-column: 2 / 2;
 }
 
 .nav-rightList {
     display:flex;
     justify-content: space-evenly;
-    grid-column: 2 / 2;
+    grid-column: 3 / 3;
+    align-items: center;
+    list-style-type: none;
 }
 
 .minimal {
@@ -64,7 +67,18 @@ nav {
 #logo {
     width: 84px;
     height: 27px;
-    grid-column: 1 / 1;
+    position: absolute;
+    top: 3.5%;
+    left: 2.5%;
+}
+
+#navToggleButton {
+    position: absolute;
+    top: 4%;
+    right: 5%;
+    background-color: hsl(0, 0%, 98%);
+    border: none;
+    display: none;
 }
 
 #registerButton {
@@ -174,7 +188,7 @@ main {
 
 .mainSentence {
     margin-bottom: 10%;
-    font-size: 18px;
+    font-size: 1.125rem;
     width: 90%;
     color:hsl(0, 0%, 41%);
 }
@@ -203,9 +217,101 @@ main {
 }
 
 .heroImage {
+    height: 100%;
     max-height: 40rem;
     grid-column: 2 / 2;
 }
+
+
+
+@media only screen and (max-width: 950px) {
+    
+    * {
+        font-size: 14px;
+    }
+
+    .heroImage {
+        max-width: 25rem;
+    }
+    
+}
+
+@media only screen and (max-width: 800px) {
+    /*NAV SECTION MOBILE */
+
+    nav {
+        flex-direction: column;
+        position: absolute;
+        height: 100%;
+        width: 60%;
+        display: flex;
+        background-color: hsl(0, 0%, 98%);
+        right: 0%;
+        display: none;
+    }
+
+    nav.active {
+        display: flex;
+    }
+
+    #navToggleButton {
+        display: flex;
+        z-index: 1;
+    }
+
+    .nav-leftList {
+        flex-direction: column;
+        z-index: 1;
+        margin: 0;
+        align-items: flex-start;
+        width: 90%;
+    }
+
+    .nav-rightList {
+        display: flex;
+        flex-direction: column;
+        padding: 0;
+    }
+
+    /*MAIN MOBILE SECTION */
+
+    main {
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr;
+        margin: 5% 0 0 0;
+    }
+
+    .heroContainer {
+        display: grid;
+        margin-top: 12%;
+    }
+
+    .heroImage {
+        grid-row: 1 / 1;
+    }
+
+    .mainOuterContainer {
+        grid-row: 2 / 2;
+    }
+    
+    .mainInnerContainer {
+        align-items: center;
+        height: 100%;
+    }
+
+    h1 {
+        font-size: 2.5rem;
+    }
+
+    .mainSentence {
+        line-height: 2rem;
+        margin: 0 5%;
+        padding: 0;
+        text-align: center;
+    }
+}
+
+
 
 
 
